# ams

./: .gitignore  AMS-8.files  AMS-8.includes  AMS9.files  AMS9.includes  CMakeLists.txt  INIT_ME  README.md  TODO  UpdateGitVersion
doc/: actions.txt  colors.txt  variables.txt
doc/templates/default/: host.xml  print.xml  user.xml
doc/templates/sites/: site.xml
etc/: CMakeLists.txt
etc/boot/: CMakeLists.txt  bash_env  bashrc.it4i  bashrc.ncbr  dashrc.ams  init.ams
etc/default/: hosts.xml
etc/default/host-subsystems/: compat.xml  cpu.xml  network.xml
etc/default/print-profiles/: default.xml
etc/lynx/: CMakeLists.txt  lynx.lss
etc/lynx-cur/: CMakeLists.txt  lynx.lss
share/: CMakeLists.txt
share/dpkg/: CMakeLists.txt
share/dpkg/DEBIAN/: CMakeLists.txt  PERSONAL  PUBLIC  control  control.tmp  postinst
share/dpkg/personal/: CMakeLists.txt
share/dpkg/personal/DEBIAN/: CMakeLists.txt  control.tmp  postinst
share/dpkg/personal/etc/: bashrc
share/dpkg/personal/software/ncbr/softrepo/_ams_bundle/: audit.xml  config.xml
share/etc-templates/default/: users.xml
share/etc-templates/default/host-subsystems/: default.xml  desktop.xml  gpu-nvidia.xml  gpu.xml  os.xml
share/etc-templates/host-groups/: metavo.xml  wolf.xml
share/etc-templates/sites/: ivavik.xml  sokar.xml  wolf.xml
share/lynx/: CMakeLists.txt
share/personal/: CMakeLists.txt  ams-personal  ams-personal-addbuilds  ams-personal-envinit  ams-personal-gensshkeys  ams-personal-install  ams-personal-remove  ams-personal-rmbuilds  ams-personal-showsshkey  ams-personal-sshkeys  ams-personal-useradd  ams-personal.tmp
share/personal/actions/: CMakeLists.txt
share/scripts/: CMakeLists.txt  ams-personal  ams-sync  ams-sync-bundle  ams-sync-core  ams-sync-dpkg
share/skel/: .bash_profile  .bashrc  CMakeLists.txt
share/sync/: CMakeLists.txt  ams-sync-lib
share/sync/rsync/: CMakeLists.txt  ams-ctrl-exclude-rules.txt  ams-dpkg-exclude-rules  ams-exclude-rules-blds  ams-exclude-rules-dpkg  ams-exclude-rules-site  ams-rsync-pull  ams-rsync-push  ams-site-exclude-rules  ams-stamp
share/sync/rsync/exclude/: CMakeLists.txt  ams-exclude-rules-core  ams-exclude-rules-dpkg
share/sync/rsync/push/: CMakeLists.txt  ams-rsync-bundle  ams-rsync-core  ams-rsync-dpkg
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/ams/: AMSMainHeader.cpp  AMSMainHeader.hpp  AMSMainHeaderConfig.hpp  CMakeLists.txt
src/lib/ams/base/: AMSRegistry.cpp  AMSRegistry.hpp  AmsUUID.cpp  CudaRT.cpp  CudaRT.hpp  FSIndex.cpp  FSIndex.hpp  PrintEngine.cpp  PrintEngine.hpp  ServerWatcher.cpp  Shell.cpp  Shell.hpp  ShellProcessor.cpp  ShellProcessor.hpp  Utils.cpp  Utils.hpp
src/lib/ams/cuda/: Cuda.cpp  Cuda.hpp
src/lib/ams/host/: Host.cpp  Host.hpp  HostGroup.cpp  HostGroup.hpp  StatDatagramSender.cpp  StatDatagramSender.hpp
src/lib/ams/host/components/: HostCPU.cpp  HostCPU.hpp  HostCompat.cpp  HostCompat.hpp  HostDefault.cpp  HostDefault.hpp  HostDesktop.cpp  HostDesktop.hpp  HostGPU-NVidia.cpp  HostGPU-NVidia.hpp  HostGPU.cpp  HostGPU.hpp  HostNetwork.cpp  HostNetwork.hpp  HostOS.cpp  HostOS.hpp  HostSubSystem.cpp  HostSubSystem.hpp
src/lib/ams/lscpu/: config.h  lscpu.c  lscpu.hpp
src/lib/ams/mods/: AddDatagramSender.cpp  AddDatagramSender.hpp  DirNodeItem.cpp  DirNodeItem.hpp  ModBundle.cpp  ModBundle.hpp  ModBundleIndex.cpp  ModBundleIndex.hpp  ModCache.cpp  ModCache.hpp  ModUtils.cpp  ModUtils.hpp  Module.cpp  Module.hpp  ModuleController.cpp  ModuleController.hpp  SoftStat.cpp  SoftStat.hpp
src/lib/ams/site/: AMSCompletion.cpp  AMSCompletion.hpp  Site.cpp  Site.hpp  SiteController.cpp  SiteController.hpp
src/lib/ams/soft/: AMSUserConfig.cpp  AMSUserConfig.hpp  Actions.cpp  Actions.hpp  AmsUUID.hpp  Cache.cpp  Cache.hpp  Host.cpp  Host.hpp  Map.cpp  Map.hpp  PrintEngine.cpp  PrintEngine.hpp  Site.cpp  Site.hpp  SoftConfig.cpp  SoftConfig.hpp  SoftStat.cpp  SoftStat.hpp  User.cpp  User.hpp  Utils.cpp  Utils.hpp
src/lib/ams/srv/: ServerWatcher.cpp  ServerWatcher.hpp
src/lib/ams/system/: AMSCompletion.cpp  AMSCompletion.hpp  AMSGlobalConfig.cpp  AMSGlobalConfig.hpp  Completion.cpp  Completion.hpp  FSIndex.cpp  FSIndex.hpp  GlobalConfig.cpp  GlobalConfig.hpp  Shell.cpp  Shell.hpp  ShellProcessor.cpp  ShellProcessor.hpp
src/lib/ams/torque/: Torque.cpp  Torque.hpp  TorqueAttr.cpp  TorqueAttr.hpp
src/lib/ams/user/: User.cpp  User.hpp  UserUtils.cpp  UserUtils.hpp
src/lib/torque/: pbs_ifl.h
src/sbin/: CMakeLists.txt
src/sbin/doc-old2new/: CMakeLists.txt  Old2NewCmd.cpp  Old2NewCmd.hpp  Old2NewCmdOptions.cpp  Old2NewCmdOptions.hpp
