# ==============================================================================
# Advanced Module System (AMS) CMake File
# ==============================================================================

ADD_SUBDIRECTORY(scripts)
ADD_SUBDIRECTORY(sync)
ADD_SUBDIRECTORY(lynx)
ADD_SUBDIRECTORY(dpkg)
ADD_SUBDIRECTORY(personal)
ADD_SUBDIRECTORY(skel)

